Added new heroes

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -18,7 +18,7 @@
             <div class="align-items-center container-xl d-flex flex-row">
                 <div class="row">
                     <div class="col-md-4 d-flex flex-column justify-content-center mb-4 mb-md-0 p-3">
-                        <h1>Recruitment Agency Software</h1>
+                        <h1>Recruitment Software</h1>
                         <p class="pd-hero-1-headline">An intuitive tool for temp staffers</p>
                         <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
                         <div>
@@ -50,6 +50,163 @@
                 </div>
             </div>
         </section>
+        <section class="pb-5 pt-5"></section>
+        <section class="pd-hero-2">
+            <div class="container">
+                <div class="row">
+                    <div class="align-items-center col d-flex flex-column">
+                        <div class="pd-hero-2-headline-outer">
+                            <h1>Recruitment Software</h1>
+                            <p class="pd-hero-2-headline">Take back hours of data entry. Throw away your paper stacks.
+Focus on retaining candidates and clients.</p>
+                            <p class="pd-hero-2-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
+                            <div class="pb-4 pd-hero-2-form-outer pt-2">
+                                <form>
+                                    <div class="mb-3">
+                                        <input type="email" class="form-control" id="email" value="Enter your email address">
+                                    </div>
+                                    <button type="submit" class="btn btn-info">Book a demo</button>
+                                </form>
+                            </div>
+                        </div>
+                        <div style="position: relative;">
+                            <div class="pd-hero-image-2-outer">
+                                <script>
+                                function imageLoadedListener2(e) {
+                                    const heroImageLoader = document.querySelector(".pd-hero-2-loader");
+                                    const heroImage = document.querySelector(".pd-hero-image-2");
+                                    heroImageLoader.classList.add("pd-hero-2-remove-loader");
+                                    heroImage.classList.add("pd-hero-image-2-loaded");
+                                }
+                            </script>
+                                <picture>
+                                    <source srcset="/images/uploads/hero-scissors.webp 1600w, 
+                                            /images/uploads/hero-scissors-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 64px), 1600px" type="image/webp">
+                                    <img srcset="/images/uploads/hero-scissors.png 1600w, 
+                                            /images/uploads/hero-scissors-mob.png 820w" sizes="(max-width: 600px) calc(100vw - 64px), 1600px" src="/images/uploads/hero-scissors-mob.png" alt="image of scissors app" onload="imageLoadedListener2()" class="pd-hero-image-2">
+                                </picture>
+                            </div>
+                            <div class="pd-hero-2-loader">
+                                <img src="images/design-assets/icon-loading-white.svg" alt="image loading icon" width="200" height="200">
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section class="pd-hero-3">
+            <div class="container">
+                <div class="row">
+                    <div class="align-items-center col d-flex flex-column">
+                        <div class="pd-hero-3-headline-outer">
+                            <h1>Recruitment Software</h1>
+                            <p class="pd-hero-3-headline">Take back hours of data entry. Throw away your paper stacks.
+Focus on retaining candidates and clients.</p>
+                            <p class="pd-hero-3-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
+                            <div class="pb-4 pd-hero-3-form-outer pt-2">
+                                <form>
+                                    <div class="mb-3">
+                                        <input type="email" class="form-control" id="email" value="Enter your email address">
+                                    </div>
+                                    <button type="submit" class="btn btn-info">Book a demo</button>
+                                </form>
+                            </div>
+                        </div>
+                        <div style="position: relative;">
+                            <div class="pd-hero-image-3-outer">
+                                <script>
+                                function imageLoadedListener3(e) {
+                                    const heroImageLoader = document.querySelector(".pd-hero-3-loader");
+                                    const heroImage = document.querySelector(".pd-hero-image-3");
+                                    heroImageLoader.classList.add("pd-hero-3-remove-loader");
+                                    heroImage.classList.add("pd-hero-image-3-loaded");
+                                }
+                            </script>
+                                <picture>
+                                    <source srcset="/images/uploads/hero-scissors.webp 1600w, 
+                                            /images/uploads/hero-scissors-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 64px), 1600px" type="image/webp">
+                                    <img srcset="/images/uploads/hero-scissors.png 1600w, 
+                                            /images/uploads/hero-scissors-mob.png 820w" sizes="(max-width: 600px) calc(100vw - 64px), 1600px" src="/images/uploads/hero-scissors-mob.png" alt="image of scissors app" onload="imageLoadedListener3()" class="pd-hero-image-3">
+                                </picture>
+                            </div>
+                            <div class="pd-hero-3-loader">
+                                <img src="images/design-assets/icon-loading-white.svg" alt="image loading icon" width="200" height="200">
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section class="pd-hero-4 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center  pb-5">
+                        <div>
+                            <h1>Recruitment Sofware</h1>
+                            <p class="pd-hero-4-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                            <p class="pd-hero-4-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
+                            <div>
+                                <form role="form" style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center;"> 
+                                    <div>                                          
+
+                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
+                                    </div>                                                                                                                                                    
+
+                                    <button type="submit" class="btn btn-info ms-2">Book a demo</button>                                     
+                                </form>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="pd-hero-4-images-outer">
+                            <div class="pd-hero-4-image-large-outer">
+                                <img class="img-fluid" src="images/uploads/hero-scissors.png" alt="image of desktop software">
+                            </div>
+                            <div class="pd-hero-4-image-small-outer">
+                                <img src="images/uploads/hero-scissors-mob.png" class="img-fluid" alt="images of mobile app">
+                            </div>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section class="pd-hero-5 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center  pb-5">
+                        <div>
+                            <h1>Recruitment Sofware</h1>
+                            <p class="pd-hero-5-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                            <p class="pd-hero-5-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
+                            <div>
+                                <form role="form" style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center;"> 
+                                    <div>                                          
+
+                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
+                                    </div>                                                                                                                                                    
+
+                                    <button type="submit" class="btn btn-info ms-2">Book a demo</button>                                     
+                                </form>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="pd-hero-4-images-outer pd-hero-5-images-outer">
+                            <div class="pd-hero-5-image-large-outer">
+                                <img class="img-fluid" src="images/uploads/hero-scissors.png" alt="image of desktop software">
+                            </div>
+                            <div class="pd-hero-4-image-small-outer pd-hero-5-image-small-outer">
+                                <img src="images/uploads/hero-scissors-mob.png" class="img-fluid" alt="images of mobile app">
+                            </div>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
