Added more options for heroes

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center  pb-5">
                         <div>
-                            <h1>Recruitment Sofware</h1>
+                            <h1>Recruitment Software</h1>
                             <p class="pd-hero-5-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.&nbsp;</p>
                             <p class="pd-hero-5-headline"></p>
                             <p class="pd-hero-5-headline"></p>
