--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -20,6 +20,7 @@
                     <div class="col-md-4 d-flex flex-column justify-content-center mb-4 mb-md-0 p-3">
                         <h1>Recruitment Software</h1>
                         <p class="pd-hero-1-headline">An intuitive tool for temp staffers</p>
+                        <p class="pd-hero-1-subHeadline">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                         <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
                         <div>
                             <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
@@ -65,7 +66,9 @@ Focus on retaining candidates and clients.</p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address">
                                     </div>
-                                    <button type="submit" class="btn btn-info">Book a demo</button>
+                                    <button type="submit" class="btn btn-info">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    </button>
                                 </form>
                             </div>
                         </div>
@@ -101,7 +104,7 @@ Focus on retaining candidates and clients.</p>
                     <div class="align-items-center col d-flex flex-column">
                         <div class="pd-hero-3-headline-outer">
                             <h1>Recruitment Software</h1>
-                            <p class="pd-hero-3-headline">Take back hours of data entry. Throw away your paper stacks.
+                            <p class="pd-hero-3-headline text-center">Take back hours of data entry. Throw away your paper stacks.
 Focus on retaining candidates and clients.</p>
                             <p class="pd-hero-3-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
                             <div class="pb-4 pd-hero-3-form-outer pt-2">
@@ -109,7 +112,9 @@ Focus on retaining candidates and clients.</p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address">
                                     </div>
-                                    <button type="submit" class="btn btn-info">Book a demo</button>
+                                    <button type="submit" class="btn btn-info">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    </button>
                                 </form>
                             </div>
                         </div>
@@ -144,30 +149,23 @@ Focus on retaining candidates and clients.</p>
                 <div class="row">
                     <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center  pb-5">
                         <div>
-                            <h1>Recruitment Sofware</h1>
-                            <p class="pd-hero-4-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
-                            <p class="pd-hero-4-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
+                            <h1>Recruitment Software</h1>
+                            <p class="pd-hero-4-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                            <p class="pd-hero-4-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
                             <div>
                                 <form role="form" style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center;"> 
-                                    <div>                                          
-
+                                    <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
-                                    </div>                                                                                                                                                    
-
-                                    <button type="submit" class="btn btn-info ms-2">Book a demo</button>                                     
+                                    </div>                                     
+                                    <button type="submit" class="btn btn-info ms-2">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    </button>                                     
                                 </form>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
-                    <div class="col-lg-6 col-md-12">
-                        <div class="pd-hero-4-images-outer">
-                            <div class="pd-hero-4-image-large-outer">
-                                <img class="img-fluid" src="images/uploads/hero-scissors.png" alt="image of desktop software">
-                            </div>
-                            <div class="pd-hero-4-image-small-outer">
-                                <img src="images/uploads/hero-scissors-mob.png" class="img-fluid" alt="images of mobile app">
-                            </div>
-                        </div>                                                  
+                    <div class="align-items-center col-lg-6 col-md-12 d-flex flex-column justify-content-end">
+                        <img src="images/uploads/hero-scissors-collage.png" class="img-fluid" alt="Image of scissors app software"/> 
                     </div>
                 </div>
             </div>
@@ -178,28 +176,46 @@ Focus on retaining candidates and clients.</p>
                 <div class="row">
                     <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center  pb-5">
                         <div>
-                            <h1>Recruitment Sofware</h1>
-                            <p class="pd-hero-5-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
-                            <p class="pd-hero-5-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
+                            <h1>Recruitment Software</h1>
+                            <p class="pd-hero-5-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                            <p class="pd-hero-5-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
                             <div>
                                 <form role="form" style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center;"> 
-                                    <div>                                          
-
+                                    <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
-                                    </div>                                                                                                                                                    
-
-                                    <button type="submit" class="btn btn-info ms-2">Book a demo</button>                                     
+                                    </div>                                     
+                                    <button type="submit" class="btn btn-info ms-2">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    </button>                                     
                                 </form>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
-                    <div class="col-lg-6 col-md-12">
-                        <div class="pd-hero-4-images-outer pd-hero-5-images-outer">
-                            <div class="pd-hero-5-image-large-outer">
-                                <img class="img-fluid" src="images/uploads/hero-scissors.png" alt="image of desktop software">
-                            </div>
-                            <div class="pd-hero-4-image-small-outer pd-hero-5-image-small-outer">
-                                <img src="images/uploads/hero-scissors-mob.png" class="img-fluid" alt="images of mobile app">
+                    <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-end pe-3 ps-3">
+                        <img src="images/uploads/hero-scissors-collage.png" class="img-fluid" alt="image of scissors app software"/> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section style="position: relative; overflow: hidden; display: flex; flex-direction: column; align-items: stretch; justify-content: space-between;">
+            <img src="images/uploads/hero-scissors-people-working.jpg" style="position: absolute; object-fit: cover; width: 100%; height: 100%; object-position: center center;" class="pd-hero-6"/>
+            <div class="container flex-grow-1 flex-shrink-0" style="padding-top: 9rem; padding-bottom: 9rem; position: relative;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div>
+                            <h1>Recruitment Software</h1>
+                            <p class="pd-hero-6-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                            <p class="pd-hero-6-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <div>
+                                <form role="form" style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center;"> 
+                                    <div> 
+                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
+                                    </div>                                     
+                                    <button type="submit" class="btn btn-info ms-2">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    </button>                                     
+                                </form>
                             </div>
                         </div>                                                  
                     </div>
