Added new column size pd hero 6

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -207,30 +207,24 @@ Focus on retaining candidates and clients.</p>
             </script>
             <picture>
                 <source srcset="/images/uploads/hero-scissors-people-working.webp 1800w, 
-                                /images/uploads/hero-scissors-people-working-mob.webp 820w" 
-                        sizes="(max-width: 600px) 100vw, 1800px" 
-                        type="image/webp">
+                                /images/uploads/hero-scissors-people-working-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
                 <img srcset="/images/uploads/hero-scissors-people-working.jpg 1800w,
-                            /images/uploads/hero-scissors-people-working-mob.jpg 820w"
-                    sizes="(max-width: 600px) 100vw, 1800px"
-                    src="/images/uploads/hero-scissors-people-working.jpg" 
-                    class="pd-hero-6-image" onload="imageLoadedListener6()" />
+                            /images/uploads/hero-scissors-people-working-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-scissors-people-working.jpg" class="pd-hero-6-image" onload="imageLoadedListener6()"/>
             </picture>
-            
             <div class="pd-hero-6-image-overlay"></div>
             <div class="container flex-grow-1 flex-shrink-0" style="padding-top: 9rem; padding-bottom: 9rem; position: relative;">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <div>
                             <h1>Recruitment Software</h1>
                             <p class="pd-hero-6-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
                             <p class="pd-hero-6-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
                             <div>
-                                <form role="form" style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center;"> 
+                                <form role="form" class="pd-hero-6-cta"> 
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info ms-2">
+                                    <button type="submit" class="btn btn-info ">
                                         <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
