--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -18,14 +18,18 @@
             <div class="align-items-center container-xl d-flex flex-row">
                 <div class="row">
                     <div class="col-md-4 d-flex flex-column justify-content-center mb-4 mb-md-0 p-3">
-                        <h1>Recruitment Software</h1>
-                        <p class="pd-hero-1-headline">An intuitive tool for temp staffers</p>
+                        <header>
+                            <h1>Recruitment Software</h1>
+                            <p class="pd-hero-1-headline">An intuitive tool for temp staffers</p>
+                        </header>
                         <p class="pd-hero-1-subHeadline">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                        <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
-                        <div>
-                            <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
-                            <a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"></span>Watch how it works</a>
-                        </div>                         
+                        <footer>
+                            <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
+                            <div>
+                                <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
+                                <a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"></span>Watch how it works</a>
+                            </div>
+                        </footer>                         
                     </div>
                     <div class="col-md-8 pe-md-0 ps-md-5" style="position: relative;">
                         <div class="pd-hero-image-1-outer">
@@ -57,11 +61,13 @@
                 <div class="row">
                     <div class="align-items-center col d-flex flex-column">
                         <div class="pd-hero-2-headline-outer">
-                            <h1>Recruitment Software</h1>
-                            <p class="pd-hero-2-headline">Take back hours of data entry. Throw away your paper stacks.
+                            <header>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-2-headline">Take back hours of data entry. Throw away your paper stacks.
 Focus on retaining candidates and clients.</p>
+                            </header>
                             <p class="pd-hero-2-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
-                            <div class="pb-4 pd-hero-2-form-outer pt-2">
+                            <footer class="pb-4 pd-hero-2-form-outer pt-2">
                                 <form>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address">
@@ -70,16 +76,16 @@ Focus on retaining candidates and clients.</p>
                                         <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
-                            </div>
+                            </footer>
                         </div>
                         <div style="position: relative;">
                             <div class="pd-hero-image-2-outer">
                                 <script>
                                 function imageLoadedListener2(e) {
-                                    const heroImageLoader = document.querySelector(".pd-hero-2-loader");
-                                    const heroImage = document.querySelector(".pd-hero-image-2");
-                                    heroImageLoader.classList.add("pd-hero-2-remove-loader");
-                                    heroImage.classList.add("pd-hero-image-2-loaded");
+                                    const heroImageLoader2 = document.querySelector(".pd-hero-2-loader");
+                                    const heroImage2 = document.querySelector(".pd-hero-image-2");
+                                    heroImageLoader2.classList.add("pd-hero-2-remove-loader");
+                                    heroImage2.classList.add("pd-hero-image-2-loaded");
                                 }
                             </script>
                                 <picture>
@@ -103,11 +109,13 @@ Focus on retaining candidates and clients.</p>
                 <div class="row">
                     <div class="align-items-center col d-flex flex-column">
                         <div class="pd-hero-3-headline-outer">
-                            <h1>Recruitment Software</h1>
-                            <p class="pd-hero-3-headline text-center">Take back hours of data entry. Throw away your paper stacks.
+                            <header>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-3-headline text-center">Take back hours of data entry. Throw away your paper stacks.
 Focus on retaining candidates and clients.</p>
+                            </header>
                             <p class="pd-hero-3-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
-                            <div class="pb-4 pd-hero-3-form-outer pt-2">
+                            <footer class="pb-4 pd-hero-3-form-outer pt-2">
                                 <form>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address">
@@ -116,16 +124,16 @@ Focus on retaining candidates and clients.</p>
                                         <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
-                            </div>
+                            </footer>
                         </div>
                         <div style="position: relative;">
                             <div class="pd-hero-image-3-outer">
                                 <script>
                                 function imageLoadedListener3(e) {
-                                    const heroImageLoader = document.querySelector(".pd-hero-3-loader");
-                                    const heroImage = document.querySelector(".pd-hero-image-3");
-                                    heroImageLoader.classList.add("pd-hero-3-remove-loader");
-                                    heroImage.classList.add("pd-hero-image-3-loaded");
+                                    const heroImageLoader3 = document.querySelector(".pd-hero-3-loader");
+                                    const heroImage3 = document.querySelector(".pd-hero-image-3");
+                                    heroImageLoader3.classList.add("pd-hero-3-remove-loader");
+                                    heroImage3.classList.add("pd-hero-image-3-loaded");
                                 }
                             </script>
                                 <picture>
@@ -149,23 +157,34 @@ Focus on retaining candidates and clients.</p>
                 <div class="row">
                     <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center  pb-5">
                         <div>
-                            <h1>Recruitment Software</h1>
-                            <p class="pd-hero-4-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                            <header>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-4-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                            </header>
                             <p class="pd-hero-4-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
-                            <div>
-                                <form role="form" style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center;"> 
+                            <footer>
+                                <form role="form" class="pd-hero-4-cta"> 
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info ms-2">
+                                    <button type="submit" class="btn btn-info ">
                                         <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
-                            </div>
+                            </footer>
                         </div>                         
                     </div>
                     <div class="align-items-center col-lg-6 col-md-12 d-flex flex-column justify-content-end">
-                        <img src="/images/uploads/hero-scissors-collage.png" class="img-fluid" alt="Image of scissors app software"/> 
+                        <script>
+                            function imageLoadedListener4(e) {
+                                const heroImage4 = document.querySelector(".pd-hero-4-image");
+                                heroImage4.classList.add("pd-hero-image-4-loaded");
+                            }
+                        </script>
+                        <picture>
+                            <source srcset="/images/uploads/hero-scissors-collage.webp" type="image/webp">
+                            <img src="/images/uploads/hero-scissors-collage.png" class="img-fluid pd-hero-4-image" alt="Image of scissors app software" onload="imageLoadedListener4()"/> 
+                        </picture>
                     </div>
                 </div>
             </div>
@@ -176,23 +195,34 @@ Focus on retaining candidates and clients.</p>
                 <div class="row">
                     <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center  pb-5">
                         <div>
-                            <h1>Recruitment Software</h1>
-                            <p class="pd-hero-5-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                            <header>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-5-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                            </header>
                             <p class="pd-hero-5-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
-                            <div>
-                                <form role="form" style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center;"> 
+                            <footer>
+                                <form role="form" class="pd-hero-5-cta"> 
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info ms-2">
+                                    <button type="submit" class="btn btn-info ">
                                         <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
-                            </div>
+                            </footer>
                         </div>                         
                     </div>
                     <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-end pe-3 ps-3">
-                        <img src="/images/uploads/hero-scissors-collage.png" class="img-fluid" alt="image of scissors app software"/> 
+                        <script>
+                            function imageLoadedListener5(e) {
+                                const heroImage5 = document.querySelector(".pd-hero-5-image");
+                                heroImage5.classList.add("pd-hero-image-5-loaded");
+                            }
+                        </script>
+                        <picture>
+                            <source srcset="/images/uploads/hero-scissors-collage.webp" type="image/webp">
+                            <img src="/images/uploads/hero-scissors-collage.png" class="img-fluid pd-hero-5-image" alt="Image of scissors app software" onload="imageLoadedListener5()"/> 
+                        </picture>
                     </div>
                 </div>
             </div>
@@ -216,10 +246,12 @@ Focus on retaining candidates and clients.</p>
                 <div class="row">
                     <div class="col-md-8">
                         <div>
-                            <h1>Recruitment Software</h1>
-                            <p class="pd-hero-6-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                            <header>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-6-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                            </header>
                             <p class="pd-hero-6-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
-                            <div>
+                            <footer>
                                 <form role="form" class="pd-hero-6-cta"> 
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
@@ -228,8 +260,70 @@ Focus on retaining candidates and clients.</p>
                                         <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
-                            </div>
+                            </footer>
                         </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pd-hero-7 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="align-items-center col-lg-6 col-md-7 d-flex flex-row justify-content-start">
+                        <div>
+                            <header>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-7-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                            </header>
+                            <p class="pd-hero-7-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <footer>
+                                <form role="form" class="pd-hero-7-cta"> 
+                                    <div> 
+                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
+                                    </div>                                     
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    </button>                                     
+                                </form>
+                            </footer>
+                        </div>                                                  
+                    </div>
+                    <div class="align-items-center col-lg-6 col-md-5 d-flex flex-row justify-content-center pt-5 pt-md-0">
+                        <div class="pd-hero-7-image-outer">
+                            <img src="images/uploads/hero-scissors-office.svg" alt="image of office working using scissors software" width="400" height="400" class="img-fluid">
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pd-hero-8 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="align-items-center col-lg-6 col-md-7 d-flex flex-row justify-content-start">
+                        <div>
+                            <header>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-8-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                            </header>
+                            <p class="pd-hero-8-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <footer>
+                                <form role="form" class="pd-hero-8-cta"> 
+                                    <div> 
+                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
+                                    </div>                                     
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    </button>                                     
+                                </form>
+                            </footer>
+                        </div>                                                  
+                    </div>
+                    <div class="align-items-center col-lg-6 col-md-5 d-flex flex-row justify-content-center pt-5 pt-md-0">
+                        <div class="pd-hero-8-image-outer">
+                            <img src="images/uploads/hero-scissors-office.svg" alt="image of office working using scissors software" width="400" height="400" class="img-fluid">
+                        </div>                                                  
                     </div>
                 </div>
             </div>
