Added new heroes to index

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -248,7 +248,7 @@ Focus on retaining candidates and clients.</p>
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-6-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                                <p class="pd-hero-6-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
                             </header>
                             <p class="pd-hero-6-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
                             <footer>
