--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="col-md-6 d-flex flex-row">
                         <div class="align-items-center d-flex flex-row p-2">
                             <img src="images/design-assets/icon-arrow-primary.svg" alt="icon arrow" width="16" height="16">
-                            <p class="ps-2">Bold strapline about your business</p>
+                            <p class="ps-2">Optimizing your recruitment processes</p>
                         </div>
                     </div>
                     <div class="col-md-6 d-flex flex-row justify-content-end">
@@ -107,34 +107,31 @@
                 </div>
             </div>
         </section>
-        <section class="pd-hero-5 pt-5">
+        <section class="pb-5 pd-hero-7 pt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center  pb-5">
+                    <div class="align-items-center col-lg-6 col-md-7 d-flex flex-row justify-content-start">
                         <div>
-                            <h1>Recruitment Software</h1>
-                            <p class="pd-hero-5-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.&nbsp;</p>
-                            <p class="pd-hero-5-headline"></p>
-                            <p class="pd-hero-5-headline"></p>
-                            <p class="pd-hero-5-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
-                            <div>
-                                <form role="form" style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center;"> 
+                            <header>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-7-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                            </header>
+                            <p class="pd-hero-7-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <footer>
+                                <form role="form" class="pd-hero-7-cta"> 
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info ms-2">Book a demo</button>                                     
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    </button>                                     
                                 </form>
-                            </div>
+                            </footer>
                         </div>                         
                     </div>
-                    <div class="col-lg-6 col-md-12">
-                        <div class="pd-hero-4-images-outer pd-hero-5-images-outer">
-                            <div class="pd-hero-5-image-large-outer">
-                                <img class="img-fluid" src="images/uploads/hero-scissors.png" alt="image of desktop software">
-                            </div>
-                            <div class="pd-hero-4-image-small-outer pd-hero-5-image-small-outer">
-                                <img src="images/uploads/hero-scissors-mob.png" class="img-fluid" alt="images of mobile app">
-                            </div>
+                    <div class="align-items-center col-lg-6 col-md-5 d-flex flex-row justify-content-center pt-5 pt-md-0">
+                        <div class="pd-hero-7-image-outer">
+                            <img src="images/uploads/hero-scissors-office.svg" alt="image of office working using scissors software" width="400" height="400" class="img-fluid">
                         </div>                         
                     </div>
                 </div>
